# deposit

./: Anchor.toml  README.md  jest.config.ts  package.json  tsconfig.json  tsconfig.test.json
migrations/: deploy.ts
programs/deposit/: Cargo.toml
programs/deposit/src/: errors.rs  lib.rs  utils.rs
programs/deposit/src/instructions/: init_manager.rs  mod.rs  send.rs
programs/deposit/src/state/: manager.rs
tests/: constant.ts  setup.ts  utils.ts
tests/spec/: deposit.spec.ts
